# golfcoach-pro

./: .env.example  .gitignore  AGENTS.md  API_SPEC.md  ARCHITECTURE.md  CLAUDE.md  GETTING_STARTED.md  IMPLEMENTATION_PROMPT.md  README.md  REAL_TIME_ANALYSIS.md  ROADMAP.md  UI_DESIGN_PROMPT.md  docker-compose.yaml  quickstart.sh
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260110_initial_user_models.py
backend/app/: main.py
backend/app/api/v1/: __init__.py  auth.py  health.py  swings.py  users.py
backend/app/core/: celery_app.py  config.py  database.py  dependencies.py  security.py
backend/app/models/: __init__.py  base.py  swing.py  user.py
backend/app/schemas/: __init__.py  swing.py  user.py
backend/app/services/: storage_service.py  user_service.py
backend/app/tasks/: __init__.py  analysis.py
backend/tests/: conftest.py  test_auth.py  test_health.py  test_swings.py  test_users.py
